--- a/.env
+++ b/.env
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=admin
+DB_CONNECTION=pgsql
+DB_HOST=turntable.proxy.rlwy.net
+DB_PORT=26815
+DB_DATABASE=railway
+DB_USERNAME=postgres
+DB_PASSWORD=WhyOzGTcsnVAAyrUeOKaKtsQYIStgvBo
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
